# Car_bot

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: car-bot-aiogram.mdc  car-bot-compose.mdc  car-bot-core.mdc  car-bot-db.mdc  car-bot-dockerfile.mdc  car-bot-parsers.mdc  car-bot-services.mdc
.cursor/skills/car-bot-deploy/: SKILL.md
car_channel_bot/: __init__.py  logging_setup.py  main.py  pipeline_worker.py  scheduler.py
car_channel_bot/bot/: dispatcher.py  drafts.py  keyboards.py  middlewares.py  router_auto.py  router_main.py  router_manual.py  router_stats.py  states.py
car_channel_bot/config/: __init__.py  settings.py
car_channel_bot/db/: __init__.py  repositories.py  schema.py
car_channel_bot/monitoring/: __init__.py  app.py  run.py
car_channel_bot/monitoring/static/: index.html
car_channel_bot/parsers/: __init__.py  base.py  common.py  embed_json.py  factory.py  fields.py  lalafo.py  mashina.py  mashina_search_url.py  playwright_shared.py  quality.py  stub.py
car_channel_bot/services/: auto_batch_ui.py  auto_pipeline.py  auto_publish.py  fx_nbrb.py  listing_images.py  llm.py  pipeline_queue.py  publisher.py  scheduled_auto_batch.py  stats.py  text_sanitize.py
tests/: conftest.py  test_common_price.py  test_embed_json.py  test_fields.py  test_listing_images.py  test_mashina_images.py  test_mashina_url.py  test_quality.py  test_settings_admin.py  test_text_sanitize.py
tests/fixtures/: jsonld_product_usd.json
