[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-channel-bot"
version = "0.1.0"
description = "Telegram bot for car sales channel automation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.15.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "playwright>=1.49.0",
    "apscheduler>=3.10.4",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]
monitoring = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]
queue = ["redis>=5.0.0,<6"]

[project.scripts]
car-bot = "car_channel_bot.main:main"
car-mashina-monitor = "car_channel_bot.monitoring.run:main"
car-pipeline-worker = "car_channel_bot.pipeline_worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["car_channel_bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
